distributed caching support and create set operation